# WhatSaS

./: .coderabbit.yaml  .gitignore  2026-05-25-175405-add-these-two-exports-to-apijs-after-getmessages.txt  2026-06-02-173318-in-client-webjsapijs-explain-how-all-requests.txt  README.md  SECURITY_AUDIT.md  dev_app.py  fix_indent.py  requirements.txt  whatsas.service
client-cpp/: CMakeLists.txt  README.md  whatsas_pins.example.txt  whatsas_pins.txt
client-cpp/certs/: server.crt
client-cpp/include/: Auth.hpp  Client.hpp  Conversation.hpp  DecryptedMessage.hpp  HttpClient.hpp  Message.hpp  MessageStore.hpp  User.hpp
client-cpp/src/: Auth.cpp  AuthCLI.hpp  Client.cpp  Conversation.cpp  HttpClient.cpp  Message.cpp  MessageStore.cpp  User.cpp  crypto_utils.hpp  hkdf_info.hpp  hpke_utils.hpp  http_response.cpp  http_response.hpp  key_wrap.hpp  main.cpp  message_crypto.hpp  tcp_connect.hpp  tls_connect.cpp  tls_connect.hpp  ui.hpp
client-cpp/tests/: test_client.cpp  test_conversation.cpp  test_e2e.cpp  test_helpers.hpp  test_hpke.cpp  test_http.cpp  test_main.cpp  test_message.cpp  test_store.cpp  test_tamper.cpp  test_tcp.cpp  test_user.cpp
client-web/: README.md  index.html  package-lock.json  package.json  verify.html
client-web/blockchain/: blockchainVerifyView.js
client-web/crypto/: constants.js  hkdf.js  kek.js  keyStorage.js  keypair.js  merkle.js  messageEncryption.js
client-web/css/: auth.css  base.css  chat.css  message-9b6de47b3b3234f9a186360b527c8ef5.txt  styles.css  verify.css
client-web/js/: api.js  app.js  favicon.js  views.js
client-web/js/views/: auth.js  helpers.js  inbox.js
contracts/: DataStore.sol  abi.json
crypto-library/: __init__.py  constants.py  key_derivation.py  key_publisher.py  key_storage.py  keypair.py  registration.py
docs/: crypto-design.md  nginx-sas.conf  schema.sql  security_review.md  transcript_aoibheann.md  transcript_sarah.md  transcript_sreejita.md
server/: run.py
server/app/: __init__.py
server/app/audit/: routes.py
server/app/auth/: routes.py
server/app/messages/: anchor.py  routes.py
server/app/users/: routes.py
server/tests/: conftest.py  test_messages.py
verification/: registration.py
